# libgit2pp

./: CMakeLists.txt  LICENSE.md  README.md
include/: Oid.h  TestUtils.h  Wrapper.h
src/: CMakeLists.txt  DiffGenerator.cpp  DiffGenerator.h  LoadTest.cpp  Oid.cpp  PathTree.cpp  PathTree.h  TestUtils.cpp  Wrapper.cpp  main.cpp
tests/: CMakeLists.txt  CommitTest.cpp  RepositoryTest.cpp  TreeTest.cpp  UserCommitTest.cpp
